refactored code to add support for blocking